--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -51,6 +51,7 @@ jobs:
       #run: terraform init
       uses: hashicorp/terraform-github-actions@master
       with:
+          tf_actions_version: 3.102.0
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: './soluciones/ejercicio8/'
 
