--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -48,12 +48,12 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      #run: terraform init
-      uses: hashicorp/terraform-github-actions@master
-      with:
-          tf_actions_version: 1.1.7
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'soluciones/ejercicio8'
+      run: terraform -chdir=soluciones\ejercicio8 init
+      #uses: hashicorp/terraform-github-actions@master
+      #with:
+      #    tf_actions_version: 1.1.7
+      #    tf_actions_subcommand: 'init'
+      #    tf_actions_working_dir: 'soluciones/ejercicio8'
 
     # Checks that all Terraform configuration files adhere to a canonical format
     # Will fail the build if not
